traefik-v2.9.6-crd-http-externaldns/003-traefik.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: default
  name: traefik
  labels:
    app: traefik

spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-ingress-controller
      containers:
        - name: traefik
          image: traefik:v2.9.6
          args:
            - --api.insecure
            - --accesslog
            - --log
            - --log.level=DEBUG
            - --providers.kubernetescrd
            - --entrypoints.web.address=:8000
          ports:
            - name: web
              containerPort: 8000
            

---
apiVersion: v1
kind: Service
metadata:
  name: traefik-svc
  annotations:
    external-dns.alpha.kubernetes.io/ttl: "30s"
    external-dns.alpha.kubernetes.io/hostname: subdomain.example.com

spec:
  type: LoadBalancer
  selector:
    app: traefik
  ports:
    - port: 80
      name: web
      targetPort: 8000
