traefik-v2.9.6-crd-http-externaldns/005-ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: singleingressroute
  namespace: default
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`subdomain.example.com`)
    kind: Rule
    services:
    - name: whoami
      port: 80
